--- a/Dummypede/Dummypede.vcxproj
+++ b/Dummypede/Dummypede.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Page_Screen.cpp" />
     <ClCompile Include="Page_SelfIntroduction.cpp" />
     <ClCompile Include="Page_SelfIntroductionImage.cpp" />
+    <ClCompile Include="Page_Sunset.cpp" />
     <ClCompile Include="Page_UnixClock.cpp" />
     <ClCompile Include="Page_UnixTime.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -419,6 +420,7 @@
     <ClInclude Include="Page_Screen.h" />
     <ClInclude Include="Page_SelfIntroduction.h" />
     <ClInclude Include="Page_SelfIntroductionImage.h" />
+    <ClInclude Include="Page_Sunset.h" />
     <ClInclude Include="Page_UnixClock.h" />
     <ClInclude Include="Page_UnixTime.h" />
     <ClInclude Include="stdafx.h" />
