--- a/Dummypede/Dummypede.vcxproj.filters
+++ b/Dummypede/Dummypede.vcxproj.filters
@@ -315,6 +315,9 @@
     <ClCompile Include="Page_Sunset.cpp">
       <Filter>Source Files\Pages</Filter>
     </ClCompile>
+    <ClCompile Include="Page_Evnnzqfef20.cpp">
+      <Filter>Source Files\Pages</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -1116,6 +1119,9 @@
       <Filter>Header Files\Pages</Filter>
     </ClInclude>
     <ClInclude Include="Page_Sunset.h">
+      <Filter>Header Files\Pages</Filter>
+    </ClInclude>
+    <ClInclude Include="Page_Evnnzqfef20.h">
       <Filter>Header Files\Pages</Filter>
     </ClInclude>
   </ItemGroup>
